--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "GSS_Survey"]
 	path = GSS_Survey
 	url = https://github.com/jeneyring/GSS_survey
+[submodule "GSS_survey"]
+	path = GSS_survey
+	url = https://github.com/jeneyring/GSS_survey
